--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "bag1 = {'marbles' : np.array([\"color1\", \"color2\"]), 'probs' : np.array([P(color1), P(color2)])}\n",
+    "bag1 = {'marbles' : np.array([\"black\", \"color2\"]),\n",
+    "        'probs' : np.array([P(color1), P(color2)])}\n",
     "bag2 = None\n",
     "box  = None\n",
     "\n",
