--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "import numpy as np\n",
     "bag1 = {'marbles' : np.array([\"black\", \"white\"]),\n",
-    "        'probs' : np.array([0.4, P(color2)])}\n",
+    "        'probs' : np.array([0.4, 0.6])}\n",
     "bag2 = None\n",
     "box  = None\n",
     "\n",
