Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,8 @@
     "import numpy as np\n",
     "bag1 = {'marbles' : np.array([\"black\", \"white\"]),\n",
     "        'probs' : np.array([0.4, 0.6])}\n",
-    "bag2 = None\n",
+    "bag2 = {'marbles' : np.array([\"black\", \"white\"]),\n",
+    "        'probs' : np.array([0.7, 0.3])}\n",
     "box  = None\n",
     "\n",
     "bag1, bag2, box\n",
