--- a/index.ipynb
+++ b/index.ipynb
@@ -81,16 +81,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'marbles': array(['black', 'white'], dtype='<U5'),\n",
+       "  'probs': array([0.4, 0.6])},\n",
+       " {'marbles': array(['black', 'white'], dtype='<U5'),\n",
+       "  'probs': array([0.7, 0.3])},\n",
+       " {'bags': array([{'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.4, 0.6])},\n",
+       "         {'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.7, 0.3])}],\n",
+       "        dtype=object), 'probs': array([0.5, 0.5])})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "bag1 = {'marbles' : np.array([\"black\", \"white\"]),\n",
     "        'probs' : np.array([0.4, 0.6])}\n",
     "bag2 = {'marbles' : np.array([\"black\", \"white\"]),\n",
     "        'probs' : np.array([0.7, 0.3])}\n",
-    "box  = \n",
+    "box  = box = {'bags' : np.array([bag1, bag2]), 'probs' : np.array([0.5,0.5])}\n",
     "\n",
     "bag1, bag2, box\n",
     "\n",
