--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
    "source": [
     "def sample_marble(box):\n",
     "    # randomly choose a bag \n",
-    "   \n",
+    "    bag = np.random.choice(box['bags'], p = box['probs'])\n",
     "    # randomly choose a marble \n",
     "    return none\n",
     "\n",
