--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
     "    # randomly choose a bag \n",
     "    bag = np.random.choice(box['bags'], p = box['probs'])\n",
     "    # randomly choose a marble \n",
-    "    \n",
+    "    marble = np.random.choice()\n",
     "    return none\n",
     "\n",
     "#sample_marble(box)\n",
