--- a/index.ipynb
+++ b/index.ipynb
@@ -139,8 +139,8 @@
     "    # randomly choose a bag \n",
     "    bag = np.random.choice(box['bags'], p = box['probs'])\n",
     "    # randomly choose a marble \n",
-    "    marble = np.random.choice(bag[marbles], p = bag[''])\n",
-    "    return none\n",
+    "    marble = np.random.choice(bag['marbles'], p = bag['probs'])\n",
+    "    return no\n",
     "\n",
     "#sample_marble(box)\n",
     "# 'black' OR 'white'"
