Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +140,9 @@
     "    bag = np.random.choice(box['bags'], p = box['probs'])\n",
     "    # randomly choose a marble \n",
     "    marble = np.random.choice(bag['marbles'], p = bag['probs'])\n",
-    "    return no\n",
+    "    return marble\n",
     "\n",
-    "#sample_marble(box)\n",
+    "sample_marble(box)\n",
     "# 'black' OR 'white'"
    ]
   },
