Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,9 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'black'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sample_marble(box):\n",
     "    # randomly choose a bag \n",
