--- a/index.ipynb
+++ b/index.ipynb
@@ -171,7 +171,8 @@
    "outputs": [],
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
-    "    # get a bunch of marbles \n",
+    "    # get a bunch of marbles\n",
+    "    for number in range(n)\n",
     "    # compute fraction of marbles of desired color \n",
     "    return none"
    ]
