--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,9 @@
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles\n",
-    "    for number in range(n)\n",
+    "    result\n",
+    "    for number in range(num_samples):\n",
+    "        \n",
     "    # compute fraction of marbles of desired color \n",
     "    return none"
    ]
