Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,8 @@
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles\n",
-    "    r\n",
+    "    count = 0\n",
+    "    count_colo\n",
     "    for number in range(num_samples):\n",
     "        \n",
     "    # compute fraction of marbles of desired color \n",
