Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,7 @@
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles\n",
     "    count = 0\n",
-    "    count_colo\n",
+    "    count_color = 0\n",
     "    for number in range(num_samples):\n",
     "        \n",
     "    # compute fraction of marbles of desired color \n",
