Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
     "    count = 0\n",
     "    count_color = 0\n",
     "    for number in range(num_samples):\n",
-    "        result = \n",
+    "        if smaple_ma\n",
     "    # compute fraction of marbles of desired color \n",
     "    return none"
    ]
