Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,8 @@
     "    count = 0\n",
     "    count_color = 0\n",
     "    for number in range(num_samples):\n",
-    "        if sample_marble(bo)\n",
+    "        if sample_marble(box) = color:\n",
+    "            count += \n",
     "    # compute fraction of marbles of desired color \n",
     "    return none"
    ]
