--- a/index.ipynb
+++ b/index.ipynb
@@ -175,8 +175,10 @@
     "    count = 0\n",
     "    count_color = 0\n",
     "    for number in range(num_samples):\n",
+    "        c\n",
     "        if sample_marble(box) = color:\n",
-    "            count += \n",
+    "            count_color += 1\n",
+    "            \n",
     "    # compute fraction of marbles of desired color \n",
     "    return none"
    ]
