--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
     "    count = 0\n",
     "    count_color = 0\n",
     "    for number in range(num_samples):\n",
-    "        c\n",
+    "        count +=1\n",
     "        if sample_marble(box) = color:\n",
     "            count_color += 1\n",
     "            \n",
