--- a/index.ipynb
+++ b/index.ipynb
@@ -179,8 +179,7 @@
     "        if sample_marble(box) = color:\n",
     "            count_color += 1        \n",
     "    # compute fraction of marbles of desired color \n",
-    "    \n",
-    "    return none"
+    "    return count_color/cou"
    ]
   },
   {
