Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,10 +176,10 @@
     "    count_color = 0\n",
     "    for number in range(num_samples):\n",
     "        count +=1\n",
-    "        if sample_marble(box) = color:\n",
+    "        if sample_marble(box) == color:\n",
     "            count_color += 1        \n",
     "    # compute fraction of marbles of desired color \n",
-    "    return count_color/cou"
+    "    return count_color/count"
    ]
   },
   {
