--- a/index.ipynb
+++ b/index.ipynb
@@ -183,6 +183,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_of_color()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
