Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "probability_of_color()"
+    "probability_of_color(\"black\",box)"
    ]
   },
   {
