Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,11 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.541"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "probability_of_color(\"black\",box)"
+    "probability_of_color(\"black\",box, 1000)"
    ]
   },
   {
