Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# probability_of_color(\"black\", box, num_samples=100000)\n",
+    "probability_of_color(\"black\", box, num_samples=100000)\n",
     "\n",
     "\n",
     "# very close to 0.55"
