--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bag1 = {'marbles' : np.array([\"black\", \"white\"]),\n",
+    "bag1 = {'marbles' : np.array([\"black\", \"white\", \"gray\"]),\n",
     "        'probs' : np.array([0.4, 0.6])}\n",
     "bag2 = {'marbles' : np.array([\"black\", \"white\"]),\n",
     "        'probs' : np.array([0.7, 0.3])}\n",
