--- a/index.ipynb
+++ b/index.ipynb
@@ -288,9 +288,9 @@
    "outputs": [],
    "source": [
     "bag1 = {'marbles' : np.array([\"black\", \"white\", \"gray\"]),\n",
-    "        'probs' : np.array([0.4, 0.6])}\n",
-    "bag2 = {'marbles' : np.array([\"black\", \"white\"]),\n",
-    "        'probs' : np.array([0.7, 0.3])}\n",
+    "        'probs' : np.array([6/15, 4/15, 5/15])}\n",
+    "bag2 = {'marbles' : np.array([\"black\", \"white\", \"gray\"]),\n",
+    "        'probs' : np.array([6/15, 4/15, 5/15])}\n",
     "box  = box = {'bags' : np.array([bag1, bag2]), 'probs' : np.array([0.5,0.5])}\n",
     "\n",
     "bag1, bag2, box"
